--- a/app/views/boards/edit.html.erb
+++ b/app/views/boards/edit.html.erb
@@ -1,2 +1,6 @@
-<h1>Boards#edit</h1>
-<p>Find me in app/views/boards/edit.html.erb</p>
+<h1>投稿を編集する</h1>
+
+<%= render 'form', board: @board %>
+
+<%= link_to 'Show', @board %> |
+<%= link_to 'Back', boards_path %>
